remove spring boot dependency